<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">

    <AutoCompleteTextView
        android:id="@+id/autocomplete_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/autocomplete_hint"
        android:singleLine="true" />
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    <Button android:id="@+id/btn_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/origin_text"/>
    <Button android:id="@+id/btn_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dest_text"/>

</LinearLayout>

    <TextView android:text="@string/originTv" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/tv_origin" android:text="@string/notInput" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:text="@string/destTv" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/tv_dest" android:text="@string/notInput" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btn_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/comp_text"/>

</LinearLayout>
